--- a/data-ordering101/notebooks/data_ordering101.ipynb
+++ b/data-ordering101/notebooks/data_ordering101.ipynb
@@ -69,7 +69,7 @@
     "  \"project_api_key\": \"<your-api-key-here>\"\n",
     "}\n",
     "```\n",
-    "To find out how to obtain the project API key and project ID the please refer to the [documentation].(https://docs.up42.com/processing-platform/projects#developers)\n",
+    "To find out how to obtain the project API key and project ID the please refer to the [documentation](https://docs.up42.com/processing-platform/projects#developers)\n",
     "\n",
     "Reading the credentials from the JSON file `~/.up42/proj_default.json`."
    ]
