* Pushing updated notebook.

--- a/data-ordering101/notebooks/data_ordering101.ipynb
+++ b/data-ordering101/notebooks/data_ordering101.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "5157b162-450f-4abe-9d26-a9ee91a8a3cd",
    "metadata": {},
    "outputs": [],
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "d8783f2a-c41d-4a1f-ba6e-e7684e76137b",
    "metadata": {},
    "outputs": [],
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "7108021a-51ee-445f-9180-2a6dccf165ac",
    "metadata": {},
    "outputs": [],
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "d8cea5b8-8cc6-494e-850b-daf210602766",
    "metadata": {},
    "outputs": [],
@@ -344,14 +344,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "51a48780-7695-4a96-ad16-1cb8cfad8a07",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0324af30b50548c4a8eb9f99c025e935",
+       "model_id": "e284de8c792946118a2dc8cba43a11b1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1382,6 +1382,36 @@
    "source": [
     "Now that we have the image our next steps would be visualizing and/or processing it. The ordering process is now **concluded**."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "ecea959f-3b43-4ea6-94f3-db9a4861ecec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0.23.0'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from importlib import metadata\n",
+    "metadata.version(\"up42-py\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28d91d23-08de-4ffe-830e-8db6fcea489d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
