--- a/stereo-ordering101/notebooks/stereo_ordering101.ipynb
+++ b/stereo-ordering101/notebooks/stereo_ordering101.ipynb
@@ -54,7 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import up42"
+    "import up42\n"
    ]
   },
   {
@@ -96,8 +96,8 @@
    "source": [
     "from pathlib import Path\n",
     "\n",
-    "project_config_file = Path.home() /  \".up42\" / \"proj_default.json\"\n",
-    "up42.authenticate(cfg_file = project_config_file)"
+    "project_config_file = Path.home() / \".up42\" / \"proj_default.json\"\n",
+    "up42.authenticate(cfg_file=project_config_file)\n"
    ]
   },
   {
@@ -134,7 +134,7 @@
     "We are going to look into to two different AOIs:\n",
     "\n",
     " 1. To look for SPOT 6/7 stereo image sets.\n",
-    " 2. To look for Pléiades 1A/1B tristereo image sets.\n",
+    " 2. To look for Pl\u00e9iades 1A/1B tristereo image sets.\n",
     "\n",
     "Let us start with the stereo image set."
    ]
@@ -146,7 +146,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ipyleaflet import Map, GeoJSON"
+    "from ipyleaflet import Map, GeoJSON\n"
    ]
   },
   {
@@ -157,7 +157,7 @@
    "outputs": [],
    "source": [
     "# Path to the AOI GeoJSON.\n",
-    "path2aoi = \"../examples/portinho_arrabida.geojson\""
+    "path2aoi = \"../examples/portinho_arrabida.geojson\"\n"
    ]
   },
   {
@@ -168,8 +168,9 @@
    "outputs": [],
    "source": [
     "import json\n",
+    "\n",
     "with open(path2aoi, \"r\") as f:\n",
-    "    aoi_map = json.load(f)"
+    "    aoi_map = json.load(f)\n"
    ]
   },
   {
@@ -186,7 +187,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "Map(center=[38.47064394226866, -8.984506813116552], controls=(ZoomControl(options=['position', 'zoom_in_text',…"
+       "Map(center=[38.47064394226866, -8.984506813116552], controls=(ZoomControl(options=['position', 'zoom_in_text',\u2026"
       ]
      },
      "metadata": {},
@@ -199,15 +200,11 @@
     "# Add the AOI to the map. First style it and then add it.\n",
     "aoi_layer = GeoJSON(\n",
     "    data=aoi_map,\n",
-    "    style={\n",
-    "        \"opacity\": 1, \"dashArray\": \"9\", \"fillOpacity\": 0.5, \"weight\": 1\n",
-    "    },\n",
-    "    hover_style={\n",
-    "        \"color\": \"yellow\", 'dashArray': \"0\", \"fillOpacity\": 0.5\n",
-    "    },\n",
+    "    style={\"opacity\": 1, \"dashArray\": \"9\", \"fillOpacity\": 0.5, \"weight\": 1},\n",
+    "    hover_style={\"color\": \"yellow\", \"dashArray\": \"0\", \"fillOpacity\": 0.5},\n",
     ")\n",
     "mymap.add_layer(aoi_layer)\n",
-    "mymap"
+    "mymap\n"
    ]
   },
   {
@@ -226,7 +223,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "catalog = up42.initialize_catalog()"
+    "catalog = up42.initialize_catalog()\n"
    ]
   },
   {
@@ -236,7 +233,7 @@
    "source": [
     "#### Getting the display product ID\n",
     "\n",
-    "Before performing the search we need to select the data product we are interested in. In this case we are interested in a display product of a Pléiades image. The data product we want is not necessary for the search itself, but we do it now so that the ordering flow stays simple. Since we do the data product selection at the outset and not after performing the search. This reproduces the usual actions of having the product specified before hand and then performing the search."
+    "Before performing the search we need to select the data product we are interested in. In this case we are interested in a display product of a Pl\u00e9iades image. The data product we want is not necessary for the search itself, but we do it now so that the ordering flow stays simple. Since we do the data product selection at the outset and not after performing the search. This reproduces the usual actions of having the product specified before hand and then performing the search."
    ]
   },
   {
@@ -269,11 +266,11 @@
        "  'host': 'oneatlas',\n",
        "  'data_products': {'Analytic': 'b1f8c48e-d16b-44c4-a1bb-5e8a24892e69',\n",
        "   'Display': 'acc3f9a4-b622-49c1-b1e1-c762aa3e7e13'}},\n",
-       " 'Pléiades': {'collection': 'phr',\n",
+       " 'Pl\u00e9iades': {'collection': 'phr',\n",
        "  'host': 'oneatlas',\n",
        "  'data_products': {'Analytic': '4f1b2f62-98df-4c74-81f4-5dce45deee99',\n",
        "   'Display': '647780db-5a06-4b61-b525-577a8b68bb54'}},\n",
-       " 'Pléiades Neo': {'collection': 'pneo',\n",
+       " 'Pl\u00e9iades Neo': {'collection': 'pneo',\n",
        "  'host': 'oneatlas',\n",
        "  'data_products': {'Display': '17745de8-6e7d-4751-99cd-3f8e9e9d290e'}},\n",
        " 'SPOT 6/7 Tasking': {'collection': 'SPOT-tasking',\n",
@@ -281,7 +278,7 @@
        "  'data_products': {'Custom': '3a89d24e-515a-460f-a494-96be55da10a9',\n",
        "   'Analytic': '9d16c506-a6c0-4cf2-a020-8ecaf10b4160',\n",
        "   'Display': '47a693ba-4f8b-414d-8d5b-697373df4765'}},\n",
-       " 'Pléiades Neo Tasking': {'collection': 'pneo-tasking',\n",
+       " 'Pl\u00e9iades Neo Tasking': {'collection': 'pneo-tasking',\n",
        "  'host': 'oneatlas',\n",
        "  'data_products': {'Custom': '07c33a51-94b9-4509-84df-e9c13ea92b84',\n",
        "   'Analytic': '123eabab-0511-4f36-883a-80928716c3db',\n",
@@ -289,7 +286,7 @@
        " 'Capella Space Tasking': {'collection': 'capella-tasking',\n",
        "  'host': 'capellaspace',\n",
        "  'data_products': {'Custom': '83e21b35-e431-43a0-a1c4-22a6ad313911'}},\n",
-       " 'Pléiades Tasking': {'collection': 'PHR-tasking',\n",
+       " 'Pl\u00e9iades Tasking': {'collection': 'PHR-tasking',\n",
        "  'host': 'oneatlas',\n",
        "  'data_products': {'Custom': '4f866cd3-d816-4c98-ace3-e6105623cf13',\n",
        "   'Analytic': 'bd102407-1814-4f92-8b5a-7697b7a73f5a',\n",
@@ -316,7 +313,7 @@
    ],
    "source": [
     "products = catalog.get_data_products(basic=True)\n",
-    "products"
+    "products\n"
    ]
   },
   {
@@ -350,7 +347,7 @@
    ],
    "source": [
     "spot_product = next(filter(lambda e: e[0].lower().startswith(\"spot\"), products.items()))\n",
-    "spot_product"
+    "spot_product\n"
    ]
   },
   {
@@ -380,7 +377,7 @@
    ],
    "source": [
     "spot_product_id = spot_product[1][\"data_products\"][\"Display\"]\n",
-    "spot_product_id"
+    "spot_product_id\n"
    ]
   },
   {
@@ -419,7 +416,7 @@
    ],
    "source": [
     "spot_coll_name = spot_product[1][\"collection\"]\n",
-    "spot_coll_name"
+    "spot_coll_name\n"
    ]
   },
   {
@@ -437,14 +434,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spot_search_params = catalog.construct_search_parameters(geometry=aoi_map,\n",
-    "                                                         start_date=\"2021-09-01\",\n",
-    "                                                         end_date=\"2022-12-31\",\n",
-    "                                                         collections=[spot_coll_name],\n",
-    "                                                         max_cloudcover=10,\n",
-    "                                                         sortby=\"acquisitionDate\",\n",
-    "                                                         ascending=False,\n",
-    "                                                         limit=50)"
+    "spot_search_params = catalog.construct_search_parameters(\n",
+    "    geometry=aoi_map,\n",
+    "    start_date=\"2021-09-01\",\n",
+    "    end_date=\"2022-12-31\",\n",
+    "    collections=[spot_coll_name],\n",
+    "    max_cloudcover=10,\n",
+    "    sortby=\"acquisitionDate\",\n",
+    "    ascending=False,\n",
+    "    limit=50,\n",
+    ")\n"
    ]
   },
   {
@@ -471,7 +470,7 @@
     }
    ],
    "source": [
-    "spot_search_results = catalog.search(spot_search_params, as_dataframe=False)"
+    "spot_search_results = catalog.search(spot_search_params, as_dataframe=False)\n"
    ]
   },
   {
@@ -481,7 +480,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pynb_helpers import stereo"
+    "from pynb_helpers import stereo\n"
    ]
   },
   {
@@ -511,7 +510,7 @@
    ],
    "source": [
     "spot_stereo_results = stereo.select_stereo(spot_search_results[\"features\"])\n",
-    "spot_stereo_results"
+    "spot_stereo_results\n"
    ]
   },
   {
@@ -542,7 +541,7 @@
     }
    ],
    "source": [
-    "stereo.get_stereo_image_ids(spot_stereo_results)"
+    "stereo.get_stereo_image_ids(spot_stereo_results)\n"
    ]
   },
   {
@@ -565,7 +564,7 @@
    "outputs": [],
    "source": [
     "# Path to the AOI GeoJSON.\n",
-    "path2aoi2 = \"../examples/figueira_foz.geojson\""
+    "path2aoi2 = \"../examples/figueira_foz.geojson\"\n"
    ]
   },
   {
@@ -576,8 +575,9 @@
    "outputs": [],
    "source": [
     "import json\n",
+    "\n",
     "with open(path2aoi2, \"r\") as f:\n",
-    "    aoi_map2 = json.load(f)"
+    "    aoi_map2 = json.load(f)\n"
    ]
   },
   {
@@ -594,7 +594,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "Map(center=[40.157387868535764, -8.857583004391348], controls=(ZoomControl(options=['position', 'zoom_in_text'…"
+       "Map(center=[40.157387868535764, -8.857583004391348], controls=(ZoomControl(options=['position', 'zoom_in_text'\u2026"
       ]
      },
      "metadata": {},
@@ -607,15 +607,11 @@
     "# Add the AOI to the map. First style it and then add it.\n",
     "aoi_layer = GeoJSON(\n",
     "    data=aoi_map2,\n",
-    "    style={\n",
-    "        \"opacity\": 1, \"dashArray\": \"9\", \"fillOpacity\": 0.5, \"weight\": 1\n",
-    "    },\n",
-    "    hover_style={\n",
-    "        \"color\": \"yellow\", 'dashArray': \"0\", \"fillOpacity\": 0.5\n",
-    "    },\n",
+    "    style={\"opacity\": 1, \"dashArray\": \"9\", \"fillOpacity\": 0.5, \"weight\": 1},\n",
+    "    hover_style={\"color\": \"yellow\", \"dashArray\": \"0\", \"fillOpacity\": 0.5},\n",
     ")\n",
     "mymap2.add_layer(aoi_layer)\n",
-    "mymap2"
+    "mymap2\n"
    ]
   },
   {
@@ -635,7 +631,7 @@
     {
      "data": {
       "text/plain": [
-       "('Pléiades',\n",
+       "('Pl\u00e9iades',\n",
        " {'collection': 'phr',\n",
        "  'host': 'oneatlas',\n",
        "  'data_products': {'Analytic': '4f1b2f62-98df-4c74-81f4-5dce45deee99',\n",
@@ -648,8 +644,10 @@
     }
    ],
    "source": [
-    "pleiades_product = next(filter(lambda e: e[0].lower().endswith(\"ades\"), products.items()))\n",
-    "pleiades_product"
+    "pleiades_product = next(\n",
+    "    filter(lambda e: e[0].lower().endswith(\"ades\"), products.items())\n",
+    ")\n",
+    "pleiades_product\n"
    ]
   },
   {
@@ -671,7 +669,7 @@
    ],
    "source": [
     "pleiades_product_id = pleiades_product[1][\"data_products\"][\"Display\"]\n",
-    "pleiades_product_id"
+    "pleiades_product_id\n"
    ]
   },
   {
@@ -701,7 +699,7 @@
    ],
    "source": [
     "pleiades_coll_name = pleiades_product[1][\"collection\"]\n",
-    "pleiades_coll_name"
+    "pleiades_coll_name\n"
    ]
   },
   {
@@ -719,14 +717,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pleiades_search_params = catalog.construct_search_parameters(geometry=aoi_map2,\n",
-    "                                                            start_date=\"2021-09-01\",\n",
-    "                                                            end_date=\"2022-12-31\",\n",
-    "                                                            collections=[pleiades_coll_name],\n",
-    "                                                            max_cloudcover=10,\n",
-    "                                                            sortby=\"acquisitionDate\",\n",
-    "                                                            ascending=False,\n",
-    "                                                            limit=50)"
+    "pleiades_search_params = catalog.construct_search_parameters(\n",
+    "    geometry=aoi_map2,\n",
+    "    start_date=\"2021-09-01\",\n",
+    "    end_date=\"2022-12-31\",\n",
+    "    collections=[pleiades_coll_name],\n",
+    "    max_cloudcover=10,\n",
+    "    sortby=\"acquisitionDate\",\n",
+    "    ascending=False,\n",
+    "    limit=50,\n",
+    ")\n"
    ]
   },
   {
@@ -745,7 +745,7 @@
     }
    ],
    "source": [
-    "pleiades_search_results = catalog.search(pleiades_search_params, as_dataframe=False)"
+    "pleiades_search_results = catalog.search(pleiades_search_params, as_dataframe=False)\n"
    ]
   },
   {
@@ -936,8 +936,10 @@
     }
    ],
    "source": [
-    "pleiades_tristereo_results = stereo.select_tristereo(pleiades_search_results[\"features\"])\n",
-    "pleiades_tristereo_results"
+    "pleiades_tristereo_results = stereo.select_tristereo(\n",
+    "    pleiades_search_results[\"features\"]\n",
+    ")\n",
+    "pleiades_tristereo_results\n"
    ]
   },
   {
@@ -968,7 +970,7 @@
     }
    ],
    "source": [
-    "stereo.get_tristereo_image_ids(pleiades_tristereo_results)"
+    "stereo.get_tristereo_image_ids(pleiades_tristereo_results)\n"
    ]
   },
   {
