* Fixed text on authentication in the stereo notebook.

--- a/stereo-ordering101/notebooks/stereo_ordering101.ipynb
+++ b/stereo-ordering101/notebooks/stereo_ordering101.ipynb
@@ -71,10 +71,7 @@
     "}\n",
     "```\n",
     "To find out how to obtain the project API key and project ID the please refer to the [documentation](https://docs.up42.com/processing-platform/projects#developers)\n",
-    "from pathlib import Path\n",
     "\n",
-    "project_config_file = Path.home() /  \".up42\" / \"proj_default.json\"\n",
-    "up42.authenticate(cfg_file = project_config_file)\n",
     "Reading the credentials from the JSON file `~/.up42/proj_default.json`."
    ]
   },
@@ -82,7 +79,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "00b94e55-ebc2-4e2f-ae0c-9565b1bdfe67",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -97,7 +96,7 @@
     "from pathlib import Path\n",
     "\n",
     "project_config_file = Path.home() / \".up42\" / \"proj_default.json\"\n",
-    "up42.authenticate(cfg_file=project_config_file)\n"
+    "up42.authenticate(cfg_file=project_config_file)"
    ]
   },
   {
@@ -134,7 +133,7 @@
     "We are going to look into to two different AOIs:\n",
     "\n",
     " 1. To look for SPOT 6/7 stereo image sets.\n",
-    " 2. To look for Pl\u00e9iades 1A/1B tristereo image sets.\n",
+    " 2. To look for Pléiades 1A/1B tristereo image sets.\n",
     "\n",
     "Let us start with the stereo image set."
    ]
@@ -187,7 +186,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "Map(center=[38.47064394226866, -8.984506813116552], controls=(ZoomControl(options=['position', 'zoom_in_text',\u2026"
+       "Map(center=[38.47064394226866, -8.984506813116552], controls=(ZoomControl(options=['position', 'zoom_in_text',…"
       ]
      },
      "metadata": {},
@@ -233,7 +232,7 @@
    "source": [
     "#### Getting the display product ID\n",
     "\n",
-    "Before performing the search we need to select the data product we are interested in. In this case we are interested in a display product of a Pl\u00e9iades image. The data product we want is not necessary for the search itself, but we do it now so that the ordering flow stays simple. Since we do the data product selection at the outset and not after performing the search. This reproduces the usual actions of having the product specified before hand and then performing the search."
+    "Before performing the search we need to select the data product we are interested in. In this case we are interested in a display product of a Pléiades image. The data product we want is not necessary for the search itself, but we do it now so that the ordering flow stays simple. Since we do the data product selection at the outset and not after performing the search. This reproduces the usual actions of having the product specified before hand and then performing the search."
    ]
   },
   {
@@ -266,11 +265,11 @@
        "  'host': 'oneatlas',\n",
        "  'data_products': {'Analytic': 'b1f8c48e-d16b-44c4-a1bb-5e8a24892e69',\n",
        "   'Display': 'acc3f9a4-b622-49c1-b1e1-c762aa3e7e13'}},\n",
-       " 'Pl\u00e9iades': {'collection': 'phr',\n",
+       " 'Pléiades': {'collection': 'phr',\n",
        "  'host': 'oneatlas',\n",
        "  'data_products': {'Analytic': '4f1b2f62-98df-4c74-81f4-5dce45deee99',\n",
        "   'Display': '647780db-5a06-4b61-b525-577a8b68bb54'}},\n",
-       " 'Pl\u00e9iades Neo': {'collection': 'pneo',\n",
+       " 'Pléiades Neo': {'collection': 'pneo',\n",
        "  'host': 'oneatlas',\n",
        "  'data_products': {'Display': '17745de8-6e7d-4751-99cd-3f8e9e9d290e'}},\n",
        " 'SPOT 6/7 Tasking': {'collection': 'SPOT-tasking',\n",
@@ -278,7 +277,7 @@
        "  'data_products': {'Custom': '3a89d24e-515a-460f-a494-96be55da10a9',\n",
        "   'Analytic': '9d16c506-a6c0-4cf2-a020-8ecaf10b4160',\n",
        "   'Display': '47a693ba-4f8b-414d-8d5b-697373df4765'}},\n",
-       " 'Pl\u00e9iades Neo Tasking': {'collection': 'pneo-tasking',\n",
+       " 'Pléiades Neo Tasking': {'collection': 'pneo-tasking',\n",
        "  'host': 'oneatlas',\n",
        "  'data_products': {'Custom': '07c33a51-94b9-4509-84df-e9c13ea92b84',\n",
        "   'Analytic': '123eabab-0511-4f36-883a-80928716c3db',\n",
@@ -286,7 +285,7 @@
        " 'Capella Space Tasking': {'collection': 'capella-tasking',\n",
        "  'host': 'capellaspace',\n",
        "  'data_products': {'Custom': '83e21b35-e431-43a0-a1c4-22a6ad313911'}},\n",
-       " 'Pl\u00e9iades Tasking': {'collection': 'PHR-tasking',\n",
+       " 'Pléiades Tasking': {'collection': 'PHR-tasking',\n",
        "  'host': 'oneatlas',\n",
        "  'data_products': {'Custom': '4f866cd3-d816-4c98-ace3-e6105623cf13',\n",
        "   'Analytic': 'bd102407-1814-4f92-8b5a-7697b7a73f5a',\n",
@@ -933,7 +932,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "Map(center=[40.157387868535764, -8.857583004391348], controls=(ZoomControl(options=['position', 'zoom_in_text'\u2026"
+       "Map(center=[40.157387868535764, -8.857583004391348], controls=(ZoomControl(options=['position', 'zoom_in_text'…"
       ]
      },
      "metadata": {},
@@ -970,7 +969,7 @@
     {
      "data": {
       "text/plain": [
-       "('Pl\u00e9iades',\n",
+       "('Pléiades',\n",
        " {'collection': 'phr',\n",
        "  'host': 'oneatlas',\n",
        "  'data_products': {'Analytic': '4f1b2f62-98df-4c74-81f4-5dce45deee99',\n",
