* New functions for stereo search.

--- a/asset-service-api101/notebooks/asset_service_api101.ipynb
+++ b/asset-service-api101/notebooks/asset_service_api101.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "015334cd-bd80-4d4f-9f3b-ca529132b152",
    "metadata": {},
    "outputs": [],
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "1bc84207-9c76-4126-a0d0-69c516d1fb73",
    "metadata": {},
    "outputs": [],
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "b5a3a97c-20d9-45e2-a1b8-f97ede8d3407",
    "metadata": {},
    "outputs": [],
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "a9194616-3ea7-487f-bec1-1b41cdc13c91",
    "metadata": {},
    "outputs": [],
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "014d5033-fd06-417d-ba7a-2ac698e07c34",
    "metadata": {},
    "outputs": [
@@ -196,21 +196,21 @@
      "data": {
       "application/json": {
        "conformsTo": [
-        "https://api.stacspec.org/v1.0.0-rc.1/item-search#filter",
-        "http://www.opengis.net/spec/ogcapi-features-1/1.0/conf/oas30",
-        "https://api.stacspec.org/v1.0.0-rc.1/core",
-        "https://api.stacspec.org/v1.0.0-rc.1/ogcapi-features/extensions/transaction",
-        "https://api.stacspec.org/v1.0.0-rc.1/ogcapi-features",
-        "http://www.opengis.net/spec/ogcapi-features-1/1.0/conf/core",
         "http://www.opengis.net/spec/ogcapi-features-1/1.0/conf/geojson",
+        "https://api.stacspec.org/v1.0.0-rc.1/item-search#filter",
         "http://www.opengis.net/spec/ogcapi-features-3/1.0/conf/features-filter",
-        "https://api.stacspec.org/v1.0.0-rc.1/item-search#sort",
-        "https://api.stacspec.org/v1.0.0-rc.1/collections",
-        "https://api.stacspec.org/v1.0.0-rc.1/item-search#filter:cql-text",
-        "http://www.opengis.net/spec/ogcapi-features-4/1.0/conf/simpletx",
-        "https://api.stacspec.org/v1.0.0-rc.1/item-search",
+        "https://api.stacspec.org/v1.0.0-rc.1/core",
         "http://www.opengis.net/spec/ogcapi-features-3/1.0/conf/filter",
-        "https://api.stacspec.org/v1.0.0-rc.1/item-search#filter:basic-cql"
+        "http://www.opengis.net/spec/cql2/1.0/conf/cql2-text",
+        "https://api.stacspec.org/v1.0.0-rc.1/collections",
+        "http://www.opengis.net/spec/ogcapi-features-1/1.0/conf/oas30",
+        "https://api.stacspec.org/v1.0.0-rc.1/item-search#sort",
+        "http://www.opengis.net/spec/ogcapi-features-4/1.0/conf/simpletx",
+        "https://api.stacspec.org/v1.0.0-rc.1/ogcapi-features/extensions/transaction",
+        "https://api.stacspec.org/v1.0.0-rc.1/item-search",
+        "http://www.opengis.net/spec/ogcapi-features-1/1.0/conf/core",
+        "https://api.stacspec.org/v1.0.0-rc.1/ogcapi-features",
+        "http://www.opengis.net/spec/cql2/1.0/conf/basic-cql2"
        ],
        "description": "UP42 Storage STAC API",
        "id": "up42-storage",
@@ -246,7 +246,7 @@
        "<IPython.core.display.JSON object>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {
       "application/json": {
        "expanded": false,
@@ -4470,7 +4470,7 @@
    "id": "d34f60c0-e9a5-4fec-ab09-12488995ddf5",
    "metadata": {},
    "source": [
-    "## Search for assets across collections\n",
+    "## Search for assets across collections: queryables\n",
     "\n",
     "One of the most important aspects of the asset STAC service is that it\n",
     "provides a unified interface to search for data. It relies on the [STAC\n",
@@ -4490,7 +4490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "ea456540-7dd5-4492-9dc4-bd9a84aebcf8",
    "metadata": {},
    "outputs": [
@@ -4511,6 +4511,11 @@
          "title": "cloud_cover",
          "type": "float"
         },
+        "collection_name": {
+         "description": "UP42 Collection Name",
+         "title": "collection_name",
+         "type": "string"
+        },
         "constellation": {
          "description": "Platform Constellation",
          "title": "constellation",
@@ -4526,10 +4531,25 @@
          "title": "eo:cloud_cover",
          "type": "float"
         },
+        "gsd": {
+         "description": "Ground Sampling Distance",
+         "title": "gsd",
+         "type": "float"
+        },
+        "order_id": {
+         "description": "UP42 Order Id",
+         "title": "order_id",
+         "type": "string"
+        },
         "tags": {
          "description": "UP42 Asset Tags",
          "title": "tags",
          "type": "array"
+        },
+        "title": {
+         "description": "User Title",
+         "title": "title",
+         "type": "string"
         },
         "workspace_id": {
          "description": "UP42 Workspace Id",
@@ -4544,7 +4564,7 @@
        "<IPython.core.display.JSON object>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {
       "application/json": {
        "expanded": true,
@@ -4633,7 +4653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "19efd4de-b844-4d9d-bff1-9799199ef3e9",
    "metadata": {},
    "outputs": [],
@@ -5802,10 +5822,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "id": "82aa64be-3213-489b-8e6d-693d2cc83db8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'my_first_poi' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[13], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m my_first_map_center \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mtuple\u001b[39m(\u001b[43mmy_first_poi\u001b[49m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcoordinates\u001b[39m\u001b[38;5;124m\"\u001b[39m][::\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m])\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'my_first_poi' is not defined"
+     ]
+    }
+   ],
    "source": [
     "my_first_map_center = tuple(my_first_poi[\"coordinates\"][::-1])"
    ]
@@ -5890,7 +5922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "id": "6e9c8d0f-f7ca-4bd3-a7f9-5a95a508ecbe",
    "metadata": {},
    "outputs": [],
@@ -8940,7 +8972,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.5"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
