pass credentials via arguments

--- a/stac-asset-service/notebooks/pystac-stac-asset-service.ipynb
+++ b/stac-asset-service/notebooks/pystac-stac-asset-service.ipynb
@@ -141,7 +141,7 @@
    "outputs": [],
    "source": [
     "def create_pystac_client(url, username, password, env):\n",
-    "    UP42_signed_token = create_auth_token(username, passwrod, env)\n",
+    "    UP42_signed_token = create_auth_token(username, password, env)\n",
     "    UP42_client = pystac_client.Client.open(\n",
     "        url=url,\n",
     "        headers= {\n",
@@ -168,7 +168,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "UP42_client = create_pystac_client(UP42_stac_catalog_url, username, passwrod, \"prod\")"
+    "UP42_client = create_pystac_client(UP42_stac_catalog_url, USERNAME, PASSWORD, \"prod\")"
    ]
   },
   {
@@ -199,7 +199,7 @@
     }
    ],
    "source": [
-    "UP42_client = create_pystac_client(UP42_stac_catalog_url, username, passwrod, \"prod\")\n",
+    "UP42_client = create_pystac_client(UP42_stac_catalog_url, username=USERNAME, password=PASSWORD, \"prod\")\n",
     "UP42_client_stac_collections = list(UP42_client.get_collections())\n",
     "len(UP42_client_stac_collections)"
    ]
@@ -796,7 +796,7 @@
     }
    ],
    "source": [
-    "UP42_client = create_pystac_client(UP42_stac_catalog_url, username, passwrod, \"prod\")\n",
+    "UP42_client = create_pystac_client(UP42_stac_catalog_url, username=USERNAME, password=PASSWORD, \"prod\")\n",
     "client_single_stac_collection = UP42_client.get_collection(stac_collection_id_asset)\n",
     "client_single_stac_collection"
    ]
@@ -829,7 +829,7 @@
     }
    ],
    "source": [
-    "UP42_client = create_pystac_client(UP42_stac_catalog_url, username, passwrod, \"prod\")\n",
+    "UP42_client = create_pystac_client(UP42_stac_catalog_url, username=USERNAME, password=PASSWORD, \"prod\")\n",
     "stac_item_scene = client_single_stac_collection.get_items()\n",
     "for i, stac_item in enumerate(stac_item_scene):\n",
     "    print(f\"{i}: Image in asset <{stac_item.id}>\")\n",
@@ -1130,7 +1130,7 @@
     }
    ],
    "source": [
-    "UP42_client = create_pystac_client(UP42_stac_catalog_url, username, passwrod, \"prod\")\n",
+    "UP42_client = create_pystac_client(UP42_stac_catalog_url, username=USERNAME, password=PASSWORD, \"prod\")\n",
     "stac_item_selected = client_single_stac_collection.get_item(last_item)\n",
     "stac_item_selected"
    ]
@@ -2397,7 +2397,7 @@
     }
    ],
    "source": [
-    "UP42_client = create_pystac_client(UP42_stac_catalog_url, username, passwrod, \"prod\")\n",
+    "UP42_client = create_pystac_client(UP42_stac_catalog_url, username=USERNAME, password=PASSWORD, \"prod\")\n",
     "date_filter = \"2022-11-01T00:00:00.000000Z/2022-12-31T00:00:00.000000Z\" # Specifies the acquisition period\n",
     "stac_items_search = UP42_client.search(\n",
     "    max_items = 100,\n",
@@ -2844,7 +2844,7 @@
     }
    ],
    "source": [
-    "UP42_client = create_pystac_client(UP42_stac_catalog_url, username, passwrod, \"prod\")\n",
+    "UP42_client = create_pystac_client(UP42_stac_catalog_url, username=USERNAME, password=PASSWORD, \"prod\")\n",
     "params = {\n",
     "    \"max_items\": 10,\n",
     "    \"limit\" : 5,\n",
@@ -3091,7 +3091,7 @@
     }
    ],
    "source": [
-    "UP42_client = create_pystac_client(UP42_stac_catalog_url, username, passwrod, \"prod\")\n",
+    "UP42_client = create_pystac_client(UP42_stac_catalog_url, username=USERNAME, password=PASSWORD, \"prod\")\n",
     "stac_items_search = UP42_client.search(\n",
     "    max_items = 100,\n",
     "    limit = 5,\n",
@@ -3152,7 +3152,7 @@
    "outputs": [],
    "source": [
     "# Gets asset IDs for download and retrieval\n",
-    "UP42_signed_token = create_auth_token(username, passwrod, \"prod\")\n",
+    "UP42_signed_token = create_auth_token(username=USERNAME, password=PASSWORD, \"prod\")\n",
     "id_assets_download = [asset.properties['up42-system:asset_id'] for asset in list(stac_items_search.items())[:2]]\n",
     "download_extract_asset(PROD_URL, id_assets_download, UP42_signed_token)"
    ]
