remove project related text

--- a/stac-asset-service/notebooks/pystac-stac-asset-service.ipynb
+++ b/stac-asset-service/notebooks/pystac-stac-asset-service.ipynb
@@ -55,23 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create an UP42 access token <a class=\"anchor\" id=\"token\"></a>\n",
-    "\n",
-    "1. [Find project credentials](#credentials)\n",
-    "2. [Generate an access token](#access)\n",
-    "\n",
-    "### Find project credentials <a class=\"anchor\" id=\"credentials\"></a>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Each API call is made at a [project](https://docs.up42.com/processing-platform/projects) level.\n",
-    "\n",
-    "1. Go to [Projects](https://console.up42.com/projects) and select an existing project or create a new one.\n",
-    "2. Go to the **Developers** tab in the project and copy the values of **project ID** and **project key**.\n",
-    "3. Copy and paste the values in the cell below."
+    "## Create an UP42 access token <a class=\"anchor\" id=\"token\"></a>\n"
    ]
   },
   {
@@ -92,7 +76,7 @@
    "source": [
     "### Generate an access token <a class=\"anchor\" id=\"access\"></a>\n",
     "\n",
-    "The cell below creates a basic token by joining the project ID and its API key and encoding the combination to Base64 format. After that, it uses the created basic token to generate an access token."
+    "The cell below creates an access token using your credentials."
    ]
   },
   {
