--- a/stac-asset-service/notebooks/pystac-stac-asset-service.ipynb
+++ b/stac-asset-service/notebooks/pystac-stac-asset-service.ipynb
@@ -152,7 +152,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "UP42_client = create_pystac_client(UP42_stac_catalog_url, USERNAME, PASSWORD, \"prod\")"
+    "UP42_client = create_pystac_client(UP42_stac_catalog_url, username=USERNAME, password=PASSWORD, env=\"prod\")"
    ]
   },
   {
@@ -183,7 +183,7 @@
     }
    ],
    "source": [
-    "UP42_client = create_pystac_client(UP42_stac_catalog_url, username=USERNAME, password=PASSWORD, \"prod\")\n",
+    "UP42_client = create_pystac_client(UP42_stac_catalog_url, username=USERNAME, password=PASSWORD, env=\"prod\")\n",
     "UP42_client_stac_collections = list(UP42_client.get_collections())\n",
     "len(UP42_client_stac_collections)"
    ]
@@ -780,7 +780,7 @@
     }
    ],
    "source": [
-    "UP42_client = create_pystac_client(UP42_stac_catalog_url, username=USERNAME, password=PASSWORD, \"prod\")\n",
+    "UP42_client = create_pystac_client(UP42_stac_catalog_url, username=USERNAME, password=PASSWORD, env=\"prod\")\n",
     "client_single_stac_collection = UP42_client.get_collection(stac_collection_id_asset)\n",
     "client_single_stac_collection"
    ]
@@ -813,7 +813,7 @@
     }
    ],
    "source": [
-    "UP42_client = create_pystac_client(UP42_stac_catalog_url, username=USERNAME, password=PASSWORD, \"prod\")\n",
+    "UP42_client = create_pystac_client(UP42_stac_catalog_url, username=USERNAME, password=PASSWORD, env=\"prod\")\n",
     "stac_item_scene = client_single_stac_collection.get_items()\n",
     "for i, stac_item in enumerate(stac_item_scene):\n",
     "    print(f\"{i}: Image in asset <{stac_item.id}>\")\n",
@@ -1114,7 +1114,7 @@
     }
    ],
    "source": [
-    "UP42_client = create_pystac_client(UP42_stac_catalog_url, username=USERNAME, password=PASSWORD, \"prod\")\n",
+    "UP42_client = create_pystac_client(UP42_stac_catalog_url, username=USERNAME, password=PASSWORD, env=\"prod\")\n",
     "stac_item_selected = client_single_stac_collection.get_item(last_item)\n",
     "stac_item_selected"
    ]
@@ -2381,7 +2381,7 @@
     }
    ],
    "source": [
-    "UP42_client = create_pystac_client(UP42_stac_catalog_url, username=USERNAME, password=PASSWORD, \"prod\")\n",
+    "UP42_client = create_pystac_client(UP42_stac_catalog_url, username=USERNAME, password=PASSWORD, env=\"prod\")\n",
     "date_filter = \"2022-11-01T00:00:00.000000Z/2022-12-31T00:00:00.000000Z\" # Specifies the acquisition period\n",
     "stac_items_search = UP42_client.search(\n",
     "    max_items = 100,\n",
@@ -2828,7 +2828,7 @@
     }
    ],
    "source": [
-    "UP42_client = create_pystac_client(UP42_stac_catalog_url, username=USERNAME, password=PASSWORD, \"prod\")\n",
+    "UP42_client = create_pystac_client(UP42_stac_catalog_url, username=USERNAME, password=PASSWORD, env=\"prod\")\n",
     "params = {\n",
     "    \"max_items\": 10,\n",
     "    \"limit\" : 5,\n",
@@ -3075,7 +3075,7 @@
     }
    ],
    "source": [
-    "UP42_client = create_pystac_client(UP42_stac_catalog_url, username=USERNAME, password=PASSWORD, \"prod\")\n",
+    "UP42_client = create_pystac_client(UP42_stac_catalog_url, username=USERNAME, password=PASSWORD, env=\"prod\")\n",
     "stac_items_search = UP42_client.search(\n",
     "    max_items = 100,\n",
     "    limit = 5,\n",
@@ -3136,7 +3136,7 @@
    "outputs": [],
    "source": [
     "# Gets asset IDs for download and retrieval\n",
-    "UP42_signed_token = create_auth_token(username=USERNAME, password=PASSWORD, \"prod\")\n",
+    "UP42_signed_token = create_auth_token(username=USERNAME, password=PASSWORD, env=\"prod\")\n",
     "id_assets_download = [asset.properties['up42-system:asset_id'] for asset in list(stac_items_search.items())[:2]]\n",
     "download_extract_asset(PROD_URL, id_assets_download, UP42_signed_token)"
    ]
