update authentication method

--- a/asset-service-api101/notebooks/asset_service_api101.ipynb
+++ b/asset-service-api101/notebooks/asset_service_api101.ipynb
@@ -67,13 +67,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install requests"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "id": "015334cd-bd80-4d4f-9f3b-ca529132b152",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import httpx\n",
-    "from httpx_auth import OAuth2ClientCredentials"
+    "import requests"
    ]
   },
   {
@@ -81,27 +89,18 @@
    "id": "aabf7908-05e9-4214-8657-4967119c20c3",
    "metadata": {},
    "source": [
-    "## Authenticate with the UP42 API\n",
-    "\n",
-    "To authenticate with the UP42 API a project ID and a project API key are\n",
-    "needed.\n",
-    "\n",
-    "The project API key and the project ID are read from a JSON file. This\n",
-    "file has the following structure:\n",
-    "\n",
-    "    {\n",
-    "      \"project_id\": \"<your-project-ID-here>\",\n",
-    "      \"project_api_key\": \"<your-api-key-here>\",\n",
-    "      \"workspace_id\": \"<your-workspace-ID-here>\"\n",
-    "    }\n",
-    "\n",
-    "To find out how to obtain the project API key and project ID please\n",
-    "refer to our\n",
-    "[documentation](https://docs.up42.com/developers/authentication#step-1-find-project-credentials).\n",
-    "\n",
-    "Reading the credentials from the JSON file `~/.up42/proj_default.json`.\n",
-    "If you have a different filename and/or the file in other location\n",
-    "please adjust the path accordingly."
+    "## Authenticate with the UP42 API\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "USERNAME = \"your-username\"\n",
+    "PASSWORD = \"your-password\"\n",
+    "WORKSPACE_ID = \"your-workspace-id\""
    ]
   },
   {
@@ -111,39 +110,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "from pathlib import Path\n",
     "\n",
-    "project_config_file = Path.home() / \".up42\" / \"proj_default.json\"\n",
-    "\n",
-    "with open(project_config_file, \"r\") as f:\n",
-    "    api_credentials = json.load(f)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4f38d270-00b3-40ed-ad02-85fc66405c54",
-   "metadata": {},
-   "source": [
-    "Now we can authenticate with the UP42 API."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "b5a3a97c-20d9-45e2-a1b8-f97ede8d3407",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from typing import Final\n",
-    "\n",
-    "_UP42_AUTH_URL: Final[str] = \"https://api.up42.com/oauth/token\"\n",
-    "\n",
-    "client_auth = OAuth2ClientCredentials(\n",
-    "                _UP42_AUTH_URL,\n",
-    "                client_id=api_credentials[\"project_id\"],\n",
-    "                client_secret=api_credentials[\"project_api_key\"],\n",
-    "            )"
+    "def get_auth_token_prod(username, password):\n",
+    "    \"\"\"Authentication based on UP42 username and password\"\"\"\n",
+    "    AUTH_URL = \"https://api.up42.com/oauth/token\"\n",
+    "    req_headers = {\n",
+    "        \"Content-Type\": \"application/x-www-form-urlencoded\",\n",
+    "    }\n",
+    "    req_body = {\n",
+    "        \"grant_type\": \"password\",\n",
+    "        \"username\": username,\n",
+    "        \"password\": password}\n",
+    "    response = requests.post(AUTH_URL, data=req_body, headers=req_headers)\n",
+    "    return response.json()['data']['accessToken']"
    ]
   },
   {
@@ -180,84 +159,7 @@
    "id": "5ad8ddad-82e9-4727-99c4-3dc027eec97e",
    "metadata": {},
    "source": [
-    "## Spatial Asset Service entry point\n",
-    "\n",
-    "Let us get the entry point for the asset service. This will inform us\n",
-    "about the available asset catalog and which standards it conforms to."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "014d5033-fd06-417d-ba7a-2ac698e07c34",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/json": {
-       "conformsTo": [
-        "http://www.opengis.net/spec/ogcapi-features-1/1.0/conf/geojson",
-        "https://api.stacspec.org/v1.0.0-rc.1/item-search#filter",
-        "http://www.opengis.net/spec/ogcapi-features-3/1.0/conf/features-filter",
-        "https://api.stacspec.org/v1.0.0-rc.1/core",
-        "http://www.opengis.net/spec/ogcapi-features-3/1.0/conf/filter",
-        "http://www.opengis.net/spec/cql2/1.0/conf/cql2-text",
-        "https://api.stacspec.org/v1.0.0-rc.1/collections",
-        "http://www.opengis.net/spec/ogcapi-features-1/1.0/conf/oas30",
-        "https://api.stacspec.org/v1.0.0-rc.1/item-search#sort",
-        "http://www.opengis.net/spec/ogcapi-features-4/1.0/conf/simpletx",
-        "https://api.stacspec.org/v1.0.0-rc.1/ogcapi-features/extensions/transaction",
-        "https://api.stacspec.org/v1.0.0-rc.1/item-search",
-        "http://www.opengis.net/spec/ogcapi-features-1/1.0/conf/core",
-        "https://api.stacspec.org/v1.0.0-rc.1/ogcapi-features",
-        "http://www.opengis.net/spec/cql2/1.0/conf/basic-cql2"
-       ],
-       "description": "UP42 Storage STAC API",
-       "id": "up42-storage",
-       "links": [
-        {
-         "href": "https://api.up42.com/v2/assets/stac/",
-         "rel": "self",
-         "type": "application/json"
-        },
-        {
-         "href": "https://api.up42.com/v2/assets/stac/",
-         "rel": "root",
-         "type": "application/json"
-        },
-        {
-         "href": "https://api.up42.com/v2/assets/stac/collections",
-         "rel": "data",
-         "type": "application/json"
-        },
-        {
-         "href": "https://api.up42.com/v2/assets/stac/search",
-         "method": "POST",
-         "rel": "search",
-         "type": "application/json"
-        }
-       ],
-       "stac_extensions": [],
-       "stac_version": "1.0.0",
-       "title": "UP42 Storage",
-       "type": "Catalog"
-      },
-      "text/plain": [
-       "<IPython.core.display.JSON object>"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {
-      "application/json": {
-       "expanded": false,
-       "root": "root"
-      }
-     },
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ppjson(httpx.get(up42_asset_stac_url(\"/\"), auth=client_auth).json())"
+    "## Spatial Asset Service entry point\n"
    ]
   },
   {
@@ -265,20 +167,6 @@
    "id": "fdbdcf95-1c43-4867-b672-3b6ace68b422",
    "metadata": {},
    "source": [
-    "Let us examine the response.\n",
-    "\n",
-    "### Statement of conformity\n",
-    "\n",
-    "This API conforms to the above listed standards.\n",
-    "\n",
-    "### Additional URLs to explore\n",
-    "\n",
-    "The `links` gives entries 3 and 4, respectively:\n",
-    "\n",
-    "-   `/search`: to search for STAC items.\n",
-    "-   `/collections`: to list the available STAC collections.\n",
-    "\n",
-    "Let us proceed as suggested by the entry point.\n",
     "\n",
     "## Listing collections\n",
     "\n",
@@ -1180,8 +1068,18 @@
     }
    ],
    "source": [
-    "first_collection = httpx.get(up42_asset_stac_url(\"/collections\"), auth=client_auth).json()\n",
-    "ppjson(first_collection)"
+    "def get_request(access_token: str, url: str) -> dict:\n",
+    "    \"\"\"Send a GET request to the UP42 STAC Asset service.\"\"\"\n",
+    "    \n",
+    "    headers = {\n",
+    "        \"Authorization\": f\"Bearer {access_token}\"\n",
+    "    }\n",
+    "    response = requests.get(url, headers=headers)\n",
+    "    return response.json()\n",
+    "\n",
+    "access_token = get_auth_token_prod(username=USERNAME, password=PASSWORD)\n",
+    "collections = get_request(access_token, url = \"https://api.up42.com/v2/assets/stac/collections\")\n",
+    "ppjson(collections)\n"
    ]
   },
   {
@@ -1214,7 +1112,7 @@
     }
    ],
    "source": [
-    "next(filter(lambda e: e.get(\"rel\") == \"next\", first_collection[\"links\"])).get(\"href\")"
+    "next(filter(lambda e: e.get(\"rel\") == \"next\", collections[\"links\"])).get(\"href\")"
    ]
   },
   {
@@ -2991,7 +2889,10 @@
     }
    ],
    "source": [
-    "ppjson(httpx.get(up42_asset_stac_url(\"/collections\" + \"?limit=20\"), auth=client_auth).json())"
+    "access_token = get_auth_token_prod(username=USERNAME, password=PASSWORD)\n",
+    "limit = 20\n",
+    "collections = get_request(access_token, url = \"https://api.up42.com/v2/assets/stac/collections\"+ f\"?limit={limit}\")\n",
+    "ppjson(collections)\n"
    ]
   },
   {
@@ -3005,32 +2906,7 @@
     "[account](https://docs.up42.com/getting-started/account). If you want to\n",
     "constrain it just to your\n",
     "[**workspace**](https://docs.up42.com/getting-started/account/workspaces),\n",
-    "then you can pass it as a **query string** argument: `workspace_id`. In\n",
-    "this case I have my workspace ID stored in the `api_credentials`\n",
-    "dictionary that I have loaded for authenticating with the UP42 API. Of\n",
-    "course you can set this argument to any workspace ID within your\n",
-    "account."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "cd5e7a4c-7861-4449-b892-1129959bb3cb",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'d39fe05a-400c-44f6-b770-86990f64b004'"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "api_credentials[\"workspace_id\"]"
+    "then you can pass it as a **query string** argument: `workspace_id`."
    ]
   },
   {
@@ -3920,11 +3796,9 @@
     }
    ],
    "source": [
-    "my_first_colls = httpx.get(\n",
-    "    up42_asset_stac_url(\"/collections\" + f\"?workspace_id={api_credentials['workspace_id']}\"),\n",
-    "    auth=client_auth).json()\n",
-    "\n",
-    "ppjson(my_first_colls)"
+    "access_token = get_auth_token_prod(username=USERNAME, password=PASSWORD)\n",
+    "my_collections = get_request(access_token, url = \"https://api.up42.com/v2/assets/stac/collections\"+ f\"?workspace_id={WORKSPACE_ID}\")\n",
+    "ppjson(collections)"
    ]
   },
   {
@@ -4095,7 +3969,7 @@
     }
    ],
    "source": [
-    "ppjson(get_in([\"collections\", 0], my_first_colls), expand=True)"
+    "ppjson(get_in([\"collections\", 0], my_collections), expand=True)"
    ]
   },
   {
@@ -4142,7 +4016,7 @@
    ],
    "source": [
     "my_first_coll_url = next(filter(lambda e: e.get(\"rel\") == \"items\",\n",
-    "                                get_in([\"collections\", 1, \"links\"], my_first_colls)))[\"href\"]\n",
+    "                                get_in([\"collections\", 1, \"links\"], my_collections)))[\"href\"]\n",
     "my_first_coll_url"
    ]
   },
@@ -4291,7 +4165,7 @@
     }
    ],
    "source": [
-    "my_first_assets = httpx.get(my_first_coll_url, auth=client_auth).json()\n",
+    "my_first_assets = get_request(access_token, url=my_first_coll_url)\n",
     "ppjson(my_first_assets, expand=True)"
    ]
   },
@@ -4462,7 +4336,8 @@
     }
    ],
    "source": [
-    "ppjson(httpx.get(my_first_asset_url, auth=client_auth).json(), expand=True)"
+    "my_first_assets = get_request(access_token, url=my_first_coll_url)\n",
+    "ppjson(my_first_assets, expand=True)"
    ]
   },
   {
@@ -4575,7 +4450,9 @@
     }
    ],
    "source": [
-    "ppjson(httpx.get(up42_asset_stac_url(\"/queryables\"), auth=client_auth).json(), expand=True)"
+    "\n",
+    "queryables = get_request(access_token, url = \"https://api.up42.com/v2/assets/stac/queryables\")\n",
+    "ppjson(queryables, expand=True)"
    ]
   },
   {
@@ -4658,12 +4535,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def search_item(req_body:dict) -> httpx.Response:\n",
+    "def search_item(req_body: dict, access_token: str):\n",
     "    \"\"\"Searches for a STAC item according to the given criteria.\"\"\"\n",
-    "    return httpx.post(up42_asset_stac_url(\"/search\"),\n",
-    "                      headers={\"content-type\":\"application/json\"},\n",
-    "                      auth=client_auth,\n",
-    "                      json=req_body)"
+    "    headers = {\n",
+    "        \"content-type\": \"application/json\",\n",
+    "        \"Authorization\": f\"Bearer {access_token}\"\n",
+    "    }\n",
+    "    return requests.post(\n",
+    "        url=\"https://api.up42.com/v2/assets/stac/search\",\n",
+    "        headers=headers,\n",
+    "        json=req_body,\n",
+    "    )\n"
    ]
   },
   {
@@ -5713,7 +5595,7 @@
     }
    ],
    "source": [
-    "search_results = search_item(req_body_poi).json()\n",
+    "search_results = search_item(my_first_poi, access_token).json()\n",
     "ppjson(search_results)"
    ]
   },
@@ -7410,7 +7292,7 @@
     }
    ],
    "source": [
-    "complex_search_results = search_item(new_intersect_req_body).json()\n",
+    "complex_search_results = search_item(new_intersect_req_body, access_token).json()\n",
     "ppjson(complex_search_results)"
    ]
   },
@@ -7449,7 +7331,7 @@
     "     dict(args=[\n",
     "             dict(args=[dict(property=\"eo:cloud_cover\"), 10],\n",
     "                  op=\"<\"),\n",
-    "             dict(args=[dict(property=\"workspace_id\"), api_credentials['workspace_id']],\n",
+    "             dict(args=[dict(property=\"workspace_id\"), WORKSPACE_ID],\n",
     "                  op=\"=\")],\n",
     "          op=\"and\")\n",
     "    )\n",
@@ -8751,7 +8633,7 @@
     }
    ],
    "source": [
-    "complex_search_results = search_item(intersect_req_body | cloud_cover_workspace_dict).json()\n",
+    "complex_search_results = search_item(intersect_req_body | cloud_cover_workspace_dict, access_token).json()\n",
     "ppjson(complex_search_results)"
    ]
   },
@@ -8893,14 +8775,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def download_asset(asset_id:str) -> None:\n",
+    "def download_asset(asset_id: str, access_token: str) -> None:\n",
     "    \"\"\"Downloads an asset with the given ID.\"\"\"\n",
+    "    \n",
     "    with open(f\"asset_{asset_id}.zip\", 'wb') as output:\n",
-    "        with httpx.stream(\"GET\",\n",
-    "                          f\"https://api.up42.com/v2/assets/{asset_id}\",\n",
-    "                          auth=client_auth) as r:\n",
-    "            for data in r.iter_bytes():\n",
-    "                output.write(data)"
+    "        headers = {\"Authorization\": f\"Bearer {access_token}\"}\n",
+    "        response = requests.get(f\"https://api.up42.com/v2/assets/{asset_id}\", headers=headers, stream=True)\n",
+    "        for data in response.iter_content(chunk_size=8192):\n",
+    "            output.write(data)\n"
    ]
   },
   {
