update authentication method in remaing notebooks

--- a/stereo-ordering101/notebooks/stereo_ordering101.ipynb
+++ b/stereo-ordering101/notebooks/stereo_ordering101.ipynb
@@ -58,21 +58,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "a33e3493-f6f9-4a17-a5d3-e4135984f32f",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## Authenticate with project ID and project key\n",
-    "The project API key and the project ID are read from a JSON file. This file has the following structure:\n",
-    "```\n",
-    "{\n",
-    "  \"project_id\": \"<your-project-ID-here>\",\n",
-    "  \"project_api_key\": \"<your-api-key-here>\"\n",
-    "}\n",
-    "```\n",
-    "To find out how to obtain the project API key and project ID the please refer to the [documentation](https://docs.up42.com/processing-platform/projects#developers)\n",
-    "\n",
-    "Reading the credentials from the JSON file `~/.up42/proj_default.json`."
+    "USERNAME = \"your-username\"\n",
+    "PASSWORD = \"your-password\""
    ]
   },
   {
@@ -95,8 +87,7 @@
    "source": [
     "from pathlib import Path\n",
     "\n",
-    "project_config_file = Path.home() / \".up42\" / \"proj_default.json\"\n",
-    "up42.authenticate(cfg_file=project_config_file)"
+    "up42.authenticate(username=USERNAME, password=PASSWORD)"
    ]
   },
   {
